# Bezier

./: .gitignore  Bezier.sln  Bezier.vcxproj  Bezier.vcxproj.filters  CMakeLists.txt  LICENSE  README.md
benchmarks/: bezier_benchmark.c  bezier_benchmark.cpp  float_benchmark.c
benchmarks/include/: benchmark.h
examples/: 5_anchor_visualization.cpp  single_cubic_bezier_curve_visualization.cpp
include/: benchmark.h  bezier.h  curve.h  display.h  tuple.h
src/: bezier.c  bezier.cpp  curve.cpp  display.cpp  main.cpp
test/: bezier_test.c  bezier_test.cpp  curve_test.cpp
